@@ -2,6 +2,8 @@ package com.urlshort.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
@@ -13,21 +15,26 @@ import java.util.List;
 public class CorsConfig {
 
     @Bean
+    @Order(Ordered.HIGHEST_PRECEDENCE)
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow all origins for simplicity in this setup, or restrict to specific
-        // domains
-        // config.setAllowedOrigins(List.of("http://localhost:3000",
-        // "https://url-shortener-lb41.vercel.app"));
-        config.setAllowedOriginPatterns(List.of("*")); // Use patterns to allow all temporarily
+        // Allow React dev server and Vercel production
+        // Sử dụng allowedOriginPatterns để hỗ trợ regex cho Vercel preview URLs
+        config.setAllowedOriginPatterns(Arrays.asList(
+            "http://localhost:*",                                    // Local dev (bất kỳ port nào)
+            "https://url-shortener-tuong.vercel.app",               // Production chính
+            "https://url-shortener-tuong-*.vercel.app"              // Vercel preview deployments
+        ));
 
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
         config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin",
                 "Access-Control-Request-Method", "Access-Control-Request-Headers"));
         config.setExposedHeaders(Arrays.asList("Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
         config.setAllowCredentials(true);
+        
+        // Max age for preflight cache
         config.setMaxAge(3600L);
 
         source.registerCorsConfiguration("/**", config);
